gcc/testsuite/g++.dg/cpp0x/vt-34055.C
@@ -7,7 +7,7 @@ template<typename...T> struct A<T*> // { dg-error "parameter packs|T" }
   void foo();  // { dg-error "parameter packs|T|candidate" }
 };
 
-template<typename...T> void A<T*>::foo() {} // { dg-error "does not match" }
+template<typename...T> void A<T*>::foo() {} // { dg-error "invalid declarator" }
 
 
 
@@ -18,7 +18,7 @@ template<typename...T> struct B<T&> // { dg-error "parameter packs|T" }
   void foo(); // { dg-error "parameter packs|T" }
 };
 
-template<typename...T> void B<T&>::foo() {} // { dg-error "does not match" }
+template<typename...T> void B<T&>::foo() {} // { dg-error "invalid declarator" }
 
 
 template<typename...> struct C;
@@ -28,4 +28,4 @@ template<typename...T> struct C<T()> // { dg-error "parameter packs|T" }
   void foo(); // { dg-error "parameter packs|T" }
 };
 
-template<typename...T> void C<T()>::foo() {} // { dg-error "does not match" }
+template<typename...T> void C<T()>::foo() {} // { dg-error "invalid declarator" }
