gcc/testsuite/g++.dg/cpp0x/vt-35024.C
@@ -1,0 +1,11 @@
+// { dg-options "-std=c++0x" }
+template<typename... T> int foo()
+{
+  typename T::X x; // { dg-error "parameter packs|T" }
+  return x;
+}
+
+void bar()
+{
+  foo<int>();
+}
