gcc/testsuite/g++.dg/cpp0x/vt-35026.C
@@ -1,0 +1,7 @@
+// { dg-options "-std=c++0x" }
+template<typename... T> struct A
+{
+  T* x[1]; // { dg-error "parameter packs|T" }
+};
+
+A<int> a;
